# commands-cli

./: .gitignore  Cargo.toml  build.rs
DEBIAN/: control
assets/: icon.icns
debian-package/DEBIAN/: control
scripts/: deb-script.bash  linux-script.bash  msi-script.bat  rpm-script.bash
src/: api.rs  auth.rs  cli_command.rs  cli_opts.rs  command.rs  constants.rs  file_io.rs  lib.rs  opts.rs  os_detection.rs  search.rs  session.rs  update_logic.rs  user.rs  user_input.rs  utils.rs  version_checker.rs  write_in_color.rs
src/command_handlers/: handle_add.rs  handle_add_command.rs  handle_login.rs  handle_new_search_commands.rs  handle_search.rs  handle_search_commands.rs  handle_sync.rs  handle_update.rs  handle_user.rs  mod.rs
src/commands_handlers/: handle_add.rs  handle_login.rs  handle_logout.rs  handle_search.rs  handle_update.rs  handle_user.rs  mod.rs
src/helpers/: fetch_and_sync_commands.rs  get_token.rs  get_user.rs  last_updated.rs  mod.rs  sync_commands.rs  token.rs  user.rs  version_checker.rs
src/objects/: command.rs  mod.rs  response_add.rs  response_cli_download_urls.rs  response_cli_latest_version_check.rs  response_error.rs  response_get_cli_download_urls.rs  response_get_commands.rs  response_get_search_commands.rs  response_get_version_check.rs  response_login.rs  response_post_command.rs  response_post_login.rs  user.rs
src/services/: api.rs  file_io.rs  mod.rs  sqlite.rs
src/services/api/: get_cli_download_urls.rs  get_commands.rs  get_search_commands.rs  get_version_check.rs  mod.rs  post_command.rs  post_login.rs
src/utils/: copy_to_clipboard.rs  download_file.rs  is_root_user.rs  mod.rs  read_from_terminal.rs  write_in_color.rs
