[package]
name = "command-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cookie_store = "0.21.1"
open = "5.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
