[package]
name = "commands-cli"
version = "0.6.0"
authors = ["Fahad <fahadfarooqmurawat@gmail.com>"]
license = "MIT"
description = "A tool to search through saved commands"
repository = "https://github.com/fahadfarooqmurawat/commands-cli.git"
keywords = ["cli", "search", "commands"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "commands"
path = "src/bin/commands.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.23", features = ["derive"] }
clipboard = "0.5.0"
dirs-next = "2.0.0"
dotenv = "0.15.0"
nu-ansi-term = "0.50.1"
open = "5.3.1"
reqwest = { version = "0.12.9", features = ["rustls-tls","json"], default-features = false }
rpassword = "7.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
termcolor = "1.4.1"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
dotenv-build = "0.1.1"
